Improve blockquote, smaller nav, fix warning, spacing for table

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,5 @@
 body {
-  @apply text-body bg-white antialiased;
+  @apply antialiased bg-white text-body;
 }
 
 a {
@@ -22,7 +22,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply leading-tight font-medium;
+  @apply font-medium leading-tight;
 }
 
 ul {
@@ -32,6 +32,7 @@ ul {
 ol {
   list-style: decimal;
 }
+
 
 @font-face {
   font-family: 'Gotham';
