--- a/src/css/components/blockquote.css
+++ b/src/css/components/blockquote.css
@@ -1,3 +1,7 @@
 blockquote {
-  @apply font-medium ml-16 pl-6 mb-3 border-l-4 border-pos-blue;
+  @apply py-3 pl-6 mb-3 italic border-l-4 border-pos-blue;
+}
+
+blockquote + p {
+  @apply mb-3 text-sm text-right text-pos-tip-text;
 }
