--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -1,5 +1,5 @@
 table {
-  @apply w-full mb-4;
+  @apply w-full my-4;
 }
 
 table th,
@@ -8,7 +8,7 @@ table td {
 }
 
 table thead th {
-  @apply align-bottom border-b-2 text-left border-pos-divider;
+  @apply text-left align-bottom border-b-2 border-pos-divider;
 }
 
 table tbody + tbody {
