--- a/src/css/layout/sidebar.css
+++ b/src/css/layout/sidebar.css
@@ -4,7 +4,7 @@ nav {
   }
 
   li a:hover {
-    @apply text-pos-darkblue;
+    @apply underline text-pos-darkblue;
   }
 
   .submenu {
